            - use typesafe GetCount, GetFirst, GetLast, Item instead
        wxNode:: Next, Previous, Data
            - use typesafe Get* instead
        wxListBase::operator wxList&()
            - use typesafe lists instead

Unix:

- fixed compilation on systems with zlib installed but < 1.1.3 version
- fixed compilation on Solaris 7 with large files support enabled

wxGTK:

- added native wxMessageDialog implementation for GTK+2 build
- fixed wxMenu::Remove (John Skiff and Benjamin Williams)
- made wxTextCtrl::EmulateKeyPress() work for Delete and Backspace
- fixed wxTopLevelWindow::ShowFullScreen to work with kwin, IceWM and
  window managers that support _NET_WM_STATE_FULLSCREEN
- added wxEVT_MENU_OPEN event generation
- fixed bug in generic file selector causing incomplete file extensions to
  be appended to filenames with no extension

wxMSW:

- possibility to use DIBs for wxBitmap implementation (Derry Bryson)
- wxStaticBitmap doesn't stretch its bitmap any longer (like other ports)
- support for accelerator keys in the owner drawn menus (Derry Bryson)
- wxCaret::SetSize() doesn't hide the caret any longer as it used to
- wxCheckListBox::Check() doesn't send CHECKLISTBOX_TOGGLE event any more
- fixed bug with wxTR_EDIT_LABELS not workign with wxTR_MULTIPLE
- fixes for compilation with OpenWatcom compiler
- fixed wxStaticText best size calculation (was wrong by '&' width)
- fixed calling wxFrame::Maximize(FALSE) before the window is shown

wxMotif:

- made wxFileDialog behaviour with complex wildcards more sensible (it still
  does not support all the features other ports do); refer to wxFileDialog
  documentation for a detailed explanation
- implemented wxWakeUpIdle
- for Motif 2.0, used the native combobox widget instead of the GPL'd
  xmcombo; xmcombo is still used for Motif 1.x and Lesstif when compiled
  with Motif 1.x compatibility
- implemented wxToggleButton
- made wxButton a bit smaller by default